--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -47,6 +47,12 @@ http {
             proxy_redirect off;
             proxy_pass http://app_server;
 
+            set_real_ip_from  10.0.0.0/8;
+            set_real_ip_from  172.16.0.0/12;
+            set_real_ip_from  192.168.0.0/16;
+            real_ip_header    X-Forwarded-For;
+            real_ip_recursive off;
+
             access_by_lua_file "vendor/nginx_lua/access.lua";
         }
     }
